# my-work-wiki

./: README.md  poetry_scripts.py  pyproject.toml
home/source/: computer_science.md  conf.py  data_science.md  index.rst  recommender.md  reflection.md  wilson_recommender.md
home/source/_static/html/: medicine-survival-analysis.html
home/source/computer_science/: intro.md  intro.myst.md
home/source/computer_science/actor/: intro.myst.md
home/source/computer_science/elm_learning_notes/: intro.md  lazy_elm.md
home/source/computer_science/fastapi/: intro.md
home/source/computer_science/github_actions/: cache.md  intro.md  reuses.md  secrets.md
home/source/computer_science/midi/: basic.md  intro.md  midly.md
home/source/computer_science/mysql/: grouping_sets.md  intro.md
home/source/computer_science/nginx/: default_443.md  intro.md  try_files.md
home/source/computer_science/shell/: environment_variables.md  intro.md
home/source/data_science/: intro.md  intro.myst.md  wideviews_of_ds.md
home/source/data_science/CASI/: chapter.10.myst.md  chapter.6.jupyter.ipynb  chapter.6.myst.md  chapter.7.myst.md  chapter.9.myst.md  intro.myst.md
home/source/data_science/ab_test/: intro.md
home/source/data_science/audio_analysis/: intro.myst.md  pyaudioanalysis_feature.myst.md
home/source/data_science/deep_learning/: intro.md
home/source/data_science/medicine_stat/: intro.myst.md  (+1 more)
home/source/math/: intro.md  intro.myst.md
home/source/notebooks/: wilson_recommender_notebook.ipynb
home/source/reflections/: ds-progress.md  intro.md  rethink_ds_model.myst.md
(+25 files in other folders)
